# src/handler.py
@@ -1,6 +1,6 @@
-from src.domain.hello_msg import HelloMsg
-from src.domain.hello_msg_dao import HelloMsgDao
 from src.core.resources_mgr import ResourcesMgr
+from src.domain.music import Music
+from src.domain.music_dao import MusicDao
 
 import logging
 import json
@@ -9,33 +9,30 @@ logger = logging.getLogger()
 print("create dynamodb resources")
 resources_mgr = ResourcesMgr()
 
-
-def create_hello_msg(event, context):
+def create_music(event, context):
     print(event)
 
     body = json.loads(event["body"])
-
-    book = HelloMsg(language=body["language"], value=body["value"])
-
-    dao = HelloMsgDao(
+    music = Music(author=body["author"],
+                   title=body["title"],
+                   genre=body["genre"],
+                   date=body["date"])
+    dao = MusicDao(
         dynamodb_resource=resources_mgr.dynamodb_resource,
         dynamodb_client=resources_mgr.dynamodb_client,
-        table_name=resources_mgr.table_name(),
-    )
+        table_name=resources_mgr.table_name())
 
-    dao.create(book)
-
+    dao.create(music)
     return {
         "statusCode": 200,
         "headers": {"Content-Type": "application/json"},
-        "body": book.to_json(),
+        "body": music.to_json(),
     }
 
-
-def find_hello_msg(event, context):
+def find_music(event, context):
     print(event)
 
-    dao = HelloMsgDao(
+    dao = MusicDao(
         dynamodb_resource=resources_mgr.dynamodb_resource,
         dynamodb_client=resources_mgr.dynamodb_client,
         table_name=resources_mgr.table_name(),
@@ -48,3 +45,4 @@ def find_hello_msg(event, context):
         "headers": {"Content-Type": "application/json"},
         "body": json.dumps(entities, default=lambda entity: entity.to_json()),
     }
+
